recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:6: error: not found: value butNLast
    return l.head :: butNLast(l.tail,n);
                     ^