recursion.cons.butnlast.ButNlast.scala.code
def butNlast(l:List[Int], n:Int): List[Int] = {
  if(n >= l.length){
    return Nil;
  }else{
    return l.head :: butNLast(l.tail,n);
  }
}